[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanitization-bench"
version = "0.1.0"
description = "Framework-agnostic unified dataset loaders for text sanitization and multi-hop privacy leakage benchmarks."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Sanitization Bench Contributors"}
]
keywords = ["text sanitization", "privacy", "de-identification", "anonymization", "datasets", "multi-hop"]
dependencies = [
  "requests>=2.31.0",
  "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.4.0"
]

[tool.setuptools.packages.find]
include = ["sanitization_bench*"]

[tool.ruff]
line-length = 100
